Tabla basica usando componentes, ngIf e ngFor

--- a/tienda/src/app/app.component.html
+++ b/tienda/src/app/app.component.html
@@ -23,7 +23,9 @@
 <!-- CONTENIDO -->
 <div class="container">
   <div class="row">
-    <div class="col-8"> lista plantas</div>
+    <div class="col-8">
+      <app-plants-list> </app-plants-list>
+    </div>
     <div class="col-4"> Carrito de compras</div>
   </div>
 </div>
