--- a/tienda/src/app/app.component.html
+++ b/tienda/src/app/app.component.html
@@ -8,13 +8,10 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" [routerLink]="['/']">Home </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contacto</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Otros productos</a>
+        <a class="nav-link" [routerLink]="['/about']">Contacto</a>
       </li>
     </ul>
   </div>
@@ -22,13 +19,12 @@
 
 <!-- CONTENIDO -->
 <div class="container">
-  <div class="row">
-    <div class="col-8">
-      <app-plants-list> </app-plants-list>
-    </div>
-    <div class="col-4"> Carrito de compras</div>
-  </div>
+  <router-outlet></router-outlet>
 </div>
 
 <!-- FOOTER -->
-<footer> Huertita </footer>
+<footer class="page-footer font-small blue">
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a> Huertita</a>
+  </div>
+</footer>
