--- a/tienda/src/app/plants-list/plants-list.component.html
+++ b/tienda/src/app/plants-list/plants-list.component.html
@@ -1,4 +1,4 @@
-<table class="table">
+<table class="table text-center">
   <thead>
     <tr>
       <th></th>
@@ -6,16 +6,25 @@
       <th>Tipo</th>
       <th>Precio</th>
       <th>Stock</th>
+      <th>Compras</th>
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let plant of plants">
+    <tr *ngFor="let plant of plants" [ngClass]="{'clearance': plant.clearance}">
       <td><img [src]="plant.image" [alt]="plant.name" srcset="" /></td>
       <td>{{ plant.name }}</td>
       <td>{{ plant.type }}</td>
-      <td>{{ plant.price }}</td>
-      <td class="btn btn-danger" *ngIf="plant.stock == 0">SIN STOCK</td>
-      <td class="btn btn-success" *ngIf="plant.stock != 0">Comprar</td>
+      <td>{{ plant.price | currency}}</td>
+      <td> <span class="btn btn-danger" *ngIf="plant.stock == 0">SIN STOCK</span> </td>
+      <td>
+        <button (click)="downQuantity(plant)">
+          <i class="fa fa-minus-circle" aria-hidden="true"></i>
+        </button>
+        {{ plant.quantity}}
+        <button (click)="upQuantity(plant)">
+          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        </button>
+      </td>
     </tr>
   </tbody>
 </table>
