--- a/tienda/src/app/plants-list/plants-list.component.scss
+++ b/tienda/src/app/plants-list/plants-list.component.scss
@@ -1,4 +1,18 @@
 img {
   width: 50px;
-  height: 50px;
+
+}
+
+.clearance {
+  border: 2px solid green;
+  background: lightgreen;
+}
+
+button {
+  all: unset;
+  margin: 10px;
+}
+
+button:hover {
+  transform: scale(1.5);
 }
