--- a/tienda/src/app/plants-list/plants-list.component.html
+++ b/tienda/src/app/plants-list/plants-list.component.html
@@ -5,7 +5,6 @@
       <th>Nombre</th>
       <th>Tipo</th>
       <th>Precio</th>
-      <th>Stock</th>
       <th>Compras</th>
     </tr>
   </thead>
@@ -15,16 +14,10 @@
       <td>{{ plant.name }}</td>
       <td>{{ plant.type }}</td>
       <td>{{ plant.price | currency}}</td>
-      <td> <span class="btn btn-danger" *ngIf="plant.stock == 0">SIN STOCK</span> </td>
-      <td>
-        <button (click)="downQuantity(plant)">
-          <i class="fa fa-minus-circle" aria-hidden="true"></i>
-        </button>
-        {{ plant.quantity}}
-        <button (click)="upQuantity(plant)">
-          <i class="fa fa-plus-circle" aria-hidden="true"></i>
-        </button>
-      </td>
+      <span class="btn btn-danger" *ngIf="plant.stock == 0">SIN STOCK</span>
+      <app-input-number [(quantity)]="plant.quantity" [max]="plant.stock" (maxReached)="maxReached($event)"
+        *ngIf="plant.stock"></app-input-number>
     </tr>
+
   </tbody>
 </table>
